spectec/test/elab/neg/ctx-type-fully-redefined.spectec
;; Triggers elaborate.ml:1481 — defining a syntax body twice.

syntax foo = nat
syntax foo = int
